# thumbnailer

./: Cargo.toml
src/: error.rs  lib.rs  size.rs
src/formats/: image_format.rs  mod.rs  video_format.rs
src/utils/: ffmpeg_cli.rs
tests/: image_reading.rs  image_writing.rs  video_reading.rs
