[package]
name = "thumbnailer"
readme = "README.md"
license = "Apache-2.0"
authors = ["trivernis <trivernis@protonmail.com>"]
description = "An image thumbnail creation library"
version = "0.5.1"
edition = "2021"
repository = "https://github.com/Trivernis/thumbnailer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webp = "0.2.7"
mime = "0.3.17"
rayon = "1.10.0"
tempfile = "3.10.1"
image= "0.25.1"
lazy_static = "1.4.0"
