[package]
name = "thumbnailer"
readme = "README.md"
license = "Apache-2.0"
authors = ["trivernis <trivernis@protonmail.com>"]
description = "An image thumbnail creation library"
version = "0.5.1"
edition = "2021"
repository = "https://github.com/Trivernis/thumbnailer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webp = "^0.3.0"
rayon = "^1.10.0"
tempfile = "^3.10.1"
image = { version = "^0.25.2", default-features = false, features=["jpeg", "png", "gif"]}
lazy_static = "^1.4.0"
file-format = { version = "^0.25.0", features = ["reader"] }

[features]
default = ["webp"]
webp = ["image/webp"]
